# LightGUIAgent

./: .env.example  .gitignore  LICENSE  Makefile  README.md  README_ZH.md  config.example.yaml  config.yaml  main.py  pyproject.toml
lightguiagent/: __init__.py  agent.py  claude_client.py  config.py  grid_converter.py  grid_overlay.py  logger.py  settings.py
tests/: test_grid_system.py
